src/tests/valid_programs/prog4.sdw
GRANJA
SEMILLA num := 100;
SEMILLA res := num - 25;
MOSTRAR res;
CIERRE
