src/tests/invalid_programs/error4.sdw
GRANJA
SEMILLA valor@ := 25;
MOSTRAR valor@;
CIERRE